--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,9 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.plego.wagerocity.android.activities.DashboardActivity">
 
-</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/fragment_container_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="44dp">
+
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/fragment_container_stats"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        >
+
+    </FrameLayout>
+
+</LinearLayout>
+
+
