--- a/app/src/main/res/layout/layout_cell_experts.xml
+++ b/app/src/main/res/layout/layout_cell_experts.xml
@@ -4,48 +4,59 @@
     android:layout_height="wrap_content"
     >
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageview_expert_user"
-        android:background="@drawable/user1"
-        android:layout_marginLeft="20dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview_experts_cell_user_name"
-        android:text="Saad Yusuf"
-        android:layout_toRightOf="@id/imageview_expert_user"
-        android:layout_toEndOf="@id/imageview_expert_user"
-        android:layout_marginLeft="20dp"
-        android:textSize="10pt"
-
-        />
-
-    <Button
-        android:id="@+id/button_experts_cell_follow_unfollow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/blue_button_small"
-        android:text="FOLLOW"
-        android:textColor="#ffffff"
-
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="20dp"/>
-
-    <TextView
-        android:id="@+id/textview_experts_cell_description"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageview_expert_user"
-        android:layout_marginTop="10dp"
-        android:text="@string/lorem_ipsum"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
 
-        />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageview_expert_user"
+            android:background="@drawable/user1"
+            android:layout_marginLeft="20dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textview_experts_cell_user_name"
+            android:text="Saad Yusuf"
+            android:layout_toRightOf="@id/imageview_expert_user"
+            android:layout_toEndOf="@id/imageview_expert_user"
+            android:layout_marginLeft="20dp"
+            android:textSize="10pt"
+
+            />
+
+        <Button
+            android:id="@+id/button_experts_cell_follow_unfollow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/blue_button_small"
+            android:text="FOLLOW"
+            android:textColor="#ffffff"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"/>
+
+        <TextView
+            android:id="@+id/textview_experts_cell_description"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageview_expert_user"
+            android:layout_marginTop="10dp"
+            android:text="@string/lorem_ipsum"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+
+            />
+
+        </RelativeLayout>
+
+
 
 </RelativeLayout>
