--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -7,33 +7,42 @@
 
     <!--android:background="@color/com_facebook_blue"-->
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AVAILABLE"
+        android:textIsSelectable="false"
         android:background="#00000000"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        />
+        android:textColor="#000000"
+        android:textSize="8pt"
+        android:layout_alignTop="@+id/editText2"
+        android:layout_alignLeft="@+id/field_container_left"
+        android:layout_alignStart="@+id/field_container_left" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RANK"
+        android:textIsSelectable="false"
         android:background="#00000000"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        />
+        android:textColor="#000000"
+        android:textSize="8pt"
+        android:id="@+id/editText2"
+        android:layout_alignTop="@+id/editText"
+        android:layout_centerHorizontal="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RECORD"
+        android:textIsSelectable="false"
         android:background="#00000000"
         android:layout_alignParentRight="true"
+        android:textColor="#000000"
+        android:textSize="8pt"
         android:layout_marginTop="5dp"
         android:layout_marginRight="22dp"
-        />
+        android:id="@+id/editText" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -43,12 +52,13 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/field_container_center"/>
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00000000"
         android:layout_marginTop="35dp"
         android:text="15th Place"
+        android:textIsSelectable="false"
         android:layout_centerHorizontal="true"
         android:id="@+id/field_stats_rank"
         android:textColor="#ffffff"
@@ -63,17 +73,18 @@
         android:background="@drawable/available_field"
         android:id="@+id/field_container_left"/>
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00000000"
-        android:layout_marginTop="35dp"
-        android:layout_marginLeft="20dp"
         android:text="$1000000"
         android:id="@+id/field_stats_available"
         android:textColor="#ffffff"
         android:textSize="7pt"
-        />
+        android:textIsSelectable="false"
+        android:layout_alignTop="@+id/field_container_left"
+        android:layout_alignLeft="@+id/field_container_left"
+        android:layout_alignStart="@+id/field_container_left" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -84,16 +95,16 @@
         android:background="@drawable/available_field"
         android:id="@+id/field_container_right"/>
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00000000"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="35dp"
-        android:layout_marginRight="30dp"
         android:text="987.00"
+        android:textIsSelectable="false"
         android:id="@+id/field_stats_record"
         android:textColor="#ffffff"
         android:textSize="7pt"
-        />
+        android:layout_alignTop="@+id/field_container_right"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText" />
 </RelativeLayout>
