--- a/app/src/main/res/layout/layout_cell_games_list.xml
+++ b/app/src/main/res/layout/layout_cell_games_list.xml
@@ -2,18 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:layout_marginBottom="10dp"
     android:orientation="vertical">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/seperator"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ff9a9a9a"
 
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         >
+        <!--android:background="#ff9a9a9a"-->
 
         <TextView
             android:id="@+id/textview_cell_games_date_time"
@@ -25,13 +29,13 @@
             android:layout_alignWithParentIfMissing="false"
             android:layout_centerInParent="true"
             android:textIsSelectable="false"
-            android:textColor="#000000"
             />
+            <!--android:textColor="#000000"-->
 
         </RelativeLayout>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -43,9 +47,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:text="California"
-            android:textSize="10pt"
-            android:layout_weight=".5"
+            android:textSize="8pt"
             android:textIsSelectable="false"
+            android:layout_centerVertical="true"
+            android:scrollHorizontally="false"
+
             />
 
         <Button
@@ -55,7 +61,8 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/blue_button_small"
             android:text="BET"
-
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:textColor="#ffffffff" />
 
         <TextView
@@ -65,14 +72,15 @@
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:text="Florida"
-            android:textSize="10pt"
+            android:layout_alignParentRight="true"
+            android:textSize="8pt"
             android:gravity="end"
-            android:layout_weight=".5"
             android:textIsSelectable="false"
+            android:layout_centerVertical="true"
+            android:scrollHorizontally="false"
+
             />
 
-        </LinearLayout>
-
-
+        </RelativeLayout>
 
 </LinearLayout>
