working on games list adapter, have set Team a and b name, now date and bet button remains..

--- a/app/src/main/res/layout/layout_cell_games_list.xml
+++ b/app/src/main/res/layout/layout_cell_games_list.xml
@@ -63,7 +63,8 @@
             android:text="BET"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:textColor="#ffffffff" />
+            android:textColor="#ffffffff" 
+            />
 
         <TextView
             android:id="@+id/textview_cell_games_team_b"
