Added Teams Logos on Games List and Added Image Loading Code

--- a/app/src/main/res/layout/layout_cell_games_list.xml
+++ b/app/src/main/res/layout/layout_cell_games_list.xml
@@ -40,19 +40,40 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textview_cell_games_team_a"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:orientation="vertical"
             android:layout_marginStart="10dp"
-            android:text="California"
-            android:textSize="8pt"
-            android:textIsSelectable="false"
-            android:layout_centerVertical="true"
-            android:scrollHorizontally="false"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            >
 
-            />
+            <ImageView
+                android:id="@+id/imageview_cell_games_list_team_a_flag"
+                android:layout_width='60dp'
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+
+                />
+
+            <TextView
+                android:id="@+id/textview_cell_games_team_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="California"
+                android:textSize="8pt"
+                android:textIsSelectable="false"
+                android:layout_centerVertical="true"
+                android:scrollHorizontally="false"
+                android:minLines="2"
+                android:gravity="center"
+                />
+
+            </LinearLayout>
+
+
 
         <Button
             android:id="@+id/button_cell_games_list_bet"
@@ -63,24 +84,44 @@
             android:text="BET"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:textColor="#ffffffff" 
+            android:textColor="#ffffffff"
             />
 
-        <TextView
-            android:id="@+id/textview_cell_games_team_b"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
-            android:text="Florida"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_alignParentRight="true"
-            android:textSize="8pt"
-            android:gravity="end"
-            android:textIsSelectable="false"
-            android:layout_centerVertical="true"
-            android:scrollHorizontally="false"
+            android:orientation="vertical"
+            >
 
-            />
+            <ImageView
+                android:id="@+id/imageview_cell_games_list_team_b_flag"
+                android:layout_width='60dp'
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+
+                />
+
+            <TextView
+                android:id="@+id/textview_cell_games_team_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Florida"
+                android:layout_marginTop="10dp"
+                android:textSize="8pt"
+                android:gravity="center"
+                android:textIsSelectable="false"
+                android:scrollHorizontally="false"
+                android:minLines="2"
+
+                />
+
+            </LinearLayout>
+
+
 
         </RelativeLayout>
 
