--- a/app/src/main/res/layout/layout_cell_games_list.xml
+++ b/app/src/main/res/layout/layout_cell_games_list.xml
@@ -54,7 +54,7 @@
                 android:layout_width='60dp'
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
-
+                android:background="#c8ffffff"
                 />
 
             <TextView
@@ -102,7 +102,7 @@
                 android:layout_width='60dp'
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
-
+                android:background="#c8ffffff"
                 />
 
             <TextView
