--- a/app/src/main/res/layout/layout_dialog_bet_on_game.xml
+++ b/app/src/main/res/layout/layout_dialog_bet_on_game.xml
@@ -98,6 +98,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:hint="Amount Won"
             android:inputType="numberDecimal" />
 
