--- a/app/src/main/res/layout/fragment_my_picks.xml
+++ b/app/src/main/res/layout/fragment_my_picks.xml
@@ -3,8 +3,15 @@
     android:layout_height="match_parent"
     tools:context="com.plego.wagerocity.android.fragments.MyPicksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <ListView
+            android:id="@+id/listview_my_picks"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
 </FrameLayout>
