--- a/app/src/main/res/layout/layout_cell_my_picks_list.xml
+++ b/app/src/main/res/layout/layout_cell_my_picks_list.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -106,12 +109,6 @@
 
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imageview_cell_my_picks_separator_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/linearlayout_cell_my_picks_team_a"
-                    android:background="@drawable/seperator" />
 
 
             </RelativeLayout>
@@ -121,12 +118,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
-                >
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
 
 
                 <TextView
@@ -134,6 +130,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:text="Team :"
+                    android:textSize="18sp"
+
+                    />
+
+                <TextView
+                    android:id="@+id/textview_cell_my_picks_team_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:text="California Dragons"
+                    android:textColor="#ff005aff"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
+
+
+                <TextView
+                    android:id="@+id/textview_cell_my_picks_bet_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Points Spread :"
                     android:textSize="18sp"
 
@@ -143,12 +171,11 @@
                     android:id="@+id/textview_cell_my_picks_bet_type_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="200"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="#ff005aff"
                     android:layout_alignParentRight="true"
-                    />
+                    android:text="200"
+                    android:textColor="#ff005aff"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -156,12 +183,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
-                >
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
 
 
                 <TextView
@@ -178,12 +204,11 @@
                     android:id="@+id/textview_cell_my_picks_stake_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="150"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="#ff005aff"
                     android:layout_alignParentRight="true"
-                    />
+                    android:text="150"
+                    android:textColor="#ff005aff"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -191,12 +216,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
-                >
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
 
 
                 <TextView
@@ -212,12 +236,11 @@
                     android:id="@+id/textview_cell_my_picks_to_win_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="100"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="#ff005aff"
                     android:layout_alignParentRight="true"
-                    />
+                    android:text="100"
+                    android:textColor="#ff005aff"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -225,13 +248,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
-                >
-
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
 
                 <TextView
 
@@ -246,14 +267,20 @@
                     android:id="@+id/textview_cell_my_picks_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pending.."
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="#ffff3100"
                     android:layout_alignParentRight="true"
-                    />
+                    android:text="Pending.."
+                    android:textColor="#ffff3100"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/imageview_cell_my_picks_separator_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/linearlayout_cell_my_picks_team_a"
+                    android:background="@drawable/seperator" />
 
         </LinearLayout>
 
