--- a/app/src/main/res/layout/fragment_navigation_bar.xml
+++ b/app/src/main/res/layout/fragment_navigation_bar.xml
@@ -14,6 +14,7 @@
         android:layout_centerHorizontal="true" />
 
     <Button
+        android:id="@+id/button_navigation_bar_get_dollars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/coins"
