--- a/app/src/main/res/layout/fragment_leader_board_list.xml
+++ b/app/src/main/res/layout/fragment_leader_board_list.xml
@@ -7,18 +7,19 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <Spinner
-            android:id="@+id/spinner_leaderboard_filters"
-            android:layout_width="fill_parent"
-            android:layout_height="64dp"
-            android:entries="@array/leaderboard_filters"
-             />
+        <!--<Spinner-->
+            <!--android:id="@+id/spinner_leaderboard_filters"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="64dp"-->
+            <!--android:entries="@array/leaderboard_filters"-->
+             <!--/>-->
 
         <ListView
             android:id="@+id/listview_leaderboards"
-            android:layout_below="@id/spinner_leaderboard_filters"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />
+
+    <!--android:layout_below="@id/spinner_leaderboard_filters"-->
 
     </RelativeLayout>
 
