--- a/app/src/main/res/layout/layout_cell_leaderboard_users.xml
+++ b/app/src/main/res/layout/layout_cell_leaderboard_users.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        >
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView_leaderboard_cell_rank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1."
