--- a/app/src/main/res/layout/layout_cell_pools.xml
+++ b/app/src/main/res/layout/layout_cell_pools.xml
@@ -58,59 +58,59 @@
 
                 />
 
-            <TextView
-                android:id="@+id/textview_pool_cell_pipe_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@id/textview_pool_cell_pool_open_close_status"
-                android:layout_toRightOf="@id/textview_pool_cell_pool_open_close_status"
-                android:text="|" />
+            <!--<TextView-->
+                <!--android:id="@+id/textview_pool_cell_pipe_1"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:layout_toEndOf="@id/textview_pool_cell_pool_open_close_status"-->
+                <!--android:layout_toRightOf="@id/textview_pool_cell_pool_open_close_status"-->
+                <!--android:text="|" />-->
 
-            <TextView
-                android:id="@+id/textview_pool_cell_pool_members_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:text="Members:"
-                android:layout_toRightOf="@id/textview_pool_cell_pipe_1"
-                android:layout_toEndOf="@id/textview_pool_cell_pipe_1"
-                />
+            <!--<TextView-->
+                <!--android:id="@+id/textview_pool_cell_pool_members_label"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:text="Members:"-->
+                <!--android:layout_toRightOf="@id/textview_pool_cell_pipe_1"-->
+                <!--android:layout_toEndOf="@id/textview_pool_cell_pipe_1"-->
+                <!--/>-->
 
-            <TextView
-                android:id="@+id/textview_pool_cell_pool_members_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:textColor="#0070ff"
-                android:text="6"
-                android:layout_toRightOf="@id/textview_pool_cell_pool_members_label"
-                android:layout_toEndOf="@id/textview_pool_cell_pool_members_label"
-                />
+            <!--<TextView-->
+                <!--android:id="@+id/textview_pool_cell_pool_members_count"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:textColor="#0070ff"-->
+                <!--android:text="6"-->
+                <!--android:layout_toRightOf="@id/textview_pool_cell_pool_members_label"-->
+                <!--android:layout_toEndOf="@id/textview_pool_cell_pool_members_label"-->
+                <!--/>-->
 
-            <TextView
-                android:id="@+id/textview_pool_cell_pipe_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@id/textview_pool_cell_pool_members_count"
-                android:layout_toRightOf="@id/textview_pool_cell_pool_members_count"
-                android:text="|" />
+            <!--<TextView-->
+                <!--android:id="@+id/textview_pool_cell_pipe_2"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:layout_toEndOf="@id/textview_pool_cell_pool_members_count"-->
+                <!--android:layout_toRightOf="@id/textview_pool_cell_pool_members_count"-->
+                <!--android:text="|" />-->
 
-            <TextView
-                android:id="@+id/textview_pool_cell_pool_members_active_inactive_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:text="Active"
-                android:layout_toRightOf="@id/textview_pool_cell_pipe_2"
-                android:layout_toEndOf="@id/textview_pool_cell_pipe_2"
-                />
+            <!--<TextView-->
+                <!--android:id="@+id/textview_pool_cell_pool_members_active_inactive_status"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:text="Active"-->
+                <!--android:layout_toRightOf="@id/textview_pool_cell_pipe_2"-->
+                <!--android:layout_toEndOf="@id/textview_pool_cell_pipe_2"-->
+                <!--/>-->
 
             <TextView
                 android:id="@+id/textview_pool_cell_pool_start_date_label"
@@ -120,7 +120,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Start:"
-                android:layout_below="@id/textview_pool_cell_pipe_1"
+                android:layout_below="@id/textview_pool_cell_pool_open_close_status"
                 />
 
             <TextView
@@ -131,7 +131,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="12-2-2022"
-                android:layout_below="@id/textview_pool_cell_pipe_1"
+                android:layout_below="@id/textview_pool_cell_pool_open_close_status"
                 android:layout_toRightOf="@id/textview_pool_cell_pool_start_date_label"
                 android:layout_toEndOf="@id/textview_pool_cell_pool_start_date_label"
                 android:textColor="#0070ff"
