added Bet object
added User and Bet object in Game Object

Added getGamesOfPlayer API

working on GetGamesOfPlayer UI

--- a/app/src/main/res/layout/layout_cell_my_picks_list.xml
+++ b/app/src/main/res/layout/layout_cell_my_picks_list.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp"
-    >
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,6 +17,7 @@
 
 
             <RelativeLayout
+                android:id="@+id/relativelayout_mypicks_cell_team_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -60,18 +60,18 @@
                         android:layout_gravity="center_horizontal"
                         android:background="#c8ffffff" />
 
-                    <TextView
-                        android:id="@+id/textview_cell_my_picks_team_a_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:minLines="2"
-                        android:scrollHorizontally="false"
-                        android:text="California"
-                        android:textIsSelectable="false"
-                        android:textSize="8pt" />
+                    <!--<TextView-->
+                        <!--android:id="@+id/textview_cell_my_picks_team_a_name"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_marginTop="10dp"-->
+                        <!--android:gravity="center"-->
+                        <!--android:minLines="2"-->
+                        <!--android:scrollHorizontally="false"-->
+                        <!--android:text="California"-->
+                        <!--android:textIsSelectable="false"-->
+                        <!--android:textSize="8pt" />-->
 
                 </LinearLayout>
 
@@ -94,24 +94,34 @@
                         android:layout_gravity="center_horizontal"
                         android:background="#c8ffffff" />
 
-                    <TextView
-                        android:id="@+id/textview_cell_my_picks_team_b_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:minLines="2"
-                        android:scrollHorizontally="false"
-                        android:text="California"
-                        android:textIsSelectable="false"
-                        android:textSize="8pt" />
+                    <!--<TextView-->
+                        <!--android:id="@+id/textview_cell_my_picks_team_b_name"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_marginTop="10dp"-->
+                        <!--android:gravity="center"-->
+                        <!--android:minLines="2"-->
+                        <!--android:scrollHorizontally="false"-->
+                        <!--android:text="California"-->
+                        <!--android:textIsSelectable="false"-->
+                        <!--android:textSize="8pt" />-->
 
                 </LinearLayout>
 
-
-
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/textview_cell_my_picks_team_a_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Team A vs Team B"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="20sp"
+                />
 
 
             <RelativeLayout
@@ -137,13 +147,17 @@
 
                 <TextView
                     android:id="@+id/textview_cell_my_picks_team_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:gravity="right"
+                    android:maxLines="2"
                     android:text="California Dragons"
                     android:textColor="#ff005aff"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+
+                    />
 
             </RelativeLayout>
 
@@ -275,12 +289,12 @@
 
             </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/imageview_cell_my_picks_separator_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/linearlayout_cell_my_picks_team_a"
-                    android:background="@drawable/seperator" />
+            <ImageView
+                android:id="@+id/imageview_cell_my_picks_separator_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/linearlayout_cell_my_picks_team_a"
+                android:background="@drawable/seperator" />
 
         </LinearLayout>
 
